<resources>
    <string name="app_name">Snack Mate</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Enter the name of the snack</string>
    <string name="button_taste">Taste</string>
    <string name="button_price">Price</string>
    <string name="button_rate">Rate</string>
    <string name="button_country">Country</string>
    <string name="button_alphabet">Alphabetical</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Create Account</string>
    <string name="menu_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="login_progress_password_email">Sending email&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_duplicate_email">This email address is already in use</string>
    <string name="error_duplicate_username">This username is already in use</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_confirm_password">Passwords do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="signIn">Sign In</string>
    <string name="submit">Submit</string>
    <string name="orText">Or</string>
    <string name="createAccount">Create Account</string>
    <string name="emailHint">Email</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="changing_fragments">Changing Fragments</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>


</resources>
