<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    tools:showIn="@layout/app_bar_home_page"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomePage">

<!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
<!--android:paddingRight="@dimen/activity_horizontal_margin"-->

<!--<android.support.v7.widget.Toolbar-->
<!--android:id="@+id/my_action_bar_toolbar"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="39dp"-->
<!--android:background="#AFAFAF"-->
<!--android:minHeight="200dp">-->

    <LinearLayout
    android:id="@+id/LinearLayout"
    android:columnCount="5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_weight="1"
            android:text="@string/button_country"
            android:layout_gravity="fill"
            android:layout_marginRight="-8dip"
            />
        <!--android:layout_marginLeft="-8dip"-->



        <Button
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:text="@string/button_price"
            android:layout_gravity="fill"
            android:layout_marginRight="-8dip"
        />


        <Button
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:text="@string/button_rate"
            android:layout_marginRight="-8dip"
            />

        <Button
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:text="@string/button_taste"
            android:layout_gravity="fill"
            android:layout_marginRight="-8dip"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_weight="1"
            android:text="@string/button_alphabet"
            android:layout_gravity="fill"/>
            <!--android:layout_marginRight="-8dip"-->



    </LinearLayout>
<!--</android.support.v7.widget.Toolbar>-->


</LinearLayout>